commit del cambio del index.html con form

--- a/index.html
+++ b/index.html
@@ -54,5 +54,15 @@
             </tr>
         </thead>
     </table>
+    <h2>Formulario de contacto</h2>
+    <form>
+        <label for="nombre">Nombre: </label>
+        <input type="text" id="nombre" name="nombre">
+        <label for="desc">Motivo del contacto: </label>
+        <input type="text" id="desc" name="desc">
+        <label for="email">Correo Electronico: </label>
+        <input type="email" id="email" name="email">
+        <button type="submit">Enviar</button>
+    </form>
 </body>
 </html>
