Commit del link en el index.html y creacion del style.css

--- a/index.html
+++ b/index.html
@@ -4,34 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mi</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+    </style>
 </head>
 <body>
     <h1>Melvin Ihosvanny Castillo Avila</h1>
-    <h2>Esta es la pagina de la hoja de vida</h2>
-    <p>En esta pagina describire de manera corta una hoja de vida</p>
-    <h2>Introduccion</h2>
-    <p>Me llamo Melvin Ihosvanny Castillo Avila y tengo 26 años. Nací en el departamento de Caldas, y mis padres son de Tolima y Cundinamarca.</p>
-    <p>Despues de terminar mis estudios escolares nos mudamos a la ciudad de Santa Marta; Aqui hice mis estudios de 6to a 11avo, donde tambien estudie un poco de electricidad; Y continue mis estudios universitarios en esta ciudad; Luego de terminar mis estudios universitarios entre al SENA para aprender sobre el desarrollo de software, el cual estoy por terminar este año.</p>
-    <p>Asi mismo decidí ampliar un poco mas mis conocimientos y entre a este bootcamp promovido por el ministerio de las TIC.</p>
-    <h2>Hoja de vida</h2>
-    <p>Soy profesional de derecho</p>
-    <p>Tengo conocimientos en electricidad e instalaciones electricas de bajo voltaje en viviendas</p>
-    <img src="https://scontent.fbga2-1.fna.fbcdn.net/v/t39.30808-6/352056238_794332775632845_1844903894073089134_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHp6dsXk01nky5cVV6Vxnp1LvQfWgpkpZku9B9aCmSlmXoM4oa9uBImCp6VPbgpUo9IiXKiefYHCiwNdnrw3cg2&_nc_ohc=ogkQDOa86ZEQ7kNvgEM9DQa&_nc_zt=23&_nc_ht=scontent.fbga2-1.fna&_nc_gid=A7DfxlnQfsvd0UvOprBFxoe&oh=00_AYDPNnxchZBgGfwCZYYpZGv6Vt4RNh-d7KanASR5pJ4MPg&oe=6744B18A">
-    <h2>Mi red social</h2>
-    <a href="https://www.facebook.com/MelvinIhos">Mi pagina de facebook</a>
-    <h2>Mis pasatiempos</h2>
-    <ul>
+    <h2 class="porcionPantallaJustificado">Esta es la pagina de la hoja de vida</h2>
+    <p id="parrafoIntro">En esta pagina describire de manera corta una hoja de vida</p>
+    <h2 class="porcionPantallaJustificado">Introduccion</h2>
+    <p class="porcionPantallaJustificado">Me llamo Melvin Ihosvanny Castillo Avila y tengo 26 años. Nací en el departamento de Caldas, y mis padres son de Tolima y Cundinamarca.</p>
+    <p class="porcionPantallaJustificado">Despues de terminar mis estudios escolares nos mudamos a la ciudad de Santa Marta; Aqui hice mis estudios de 6to a 11avo, donde tambien estudie un poco de electricidad; Y continue mis estudios universitarios en esta ciudad; Luego de terminar mis estudios universitarios entre al SENA para aprender sobre el desarrollo de software, el cual estoy por terminar este año.</p>
+    <p class="porcionPantallaJustificado">Asi mismo decidí ampliar un poco mas mis conocimientos y entre a este bootcamp promovido por el ministerio de las TIC.</p>
+    <h2 class="porcionPantallaJustificado">Hoja de vida</h2>
+    <p class="porcionPantallaJustificado">Soy profesional de derecho</p>
+    <p class="porcionPantallaJustificado">Tengo conocimientos en electricidad e instalaciones electricas de bajo voltaje en viviendas</p>
+    <img src="https://scontent.fbga2-1.fna.fbcdn.net/v/t39.30808-6/352056238_794332775632845_1844903894073089134_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHp6dsXk01nky5cVV6Vxnp1LvQfWgpkpZku9B9aCmSlmXoM4oa9uBImCp6VPbgpUo9IiXKiefYHCiwNdnrw3cg2&_nc_ohc=ogkQDOa86ZEQ7kNvgEM9DQa&_nc_zt=23&_nc_ht=scontent.fbga2-1.fna&_nc_gid=A7DfxlnQfsvd0UvOprBFxoe&oh=00_AYDPNnxchZBgGfwCZYYpZGv6Vt4RNh-d7KanASR5pJ4MPg&oe=6744B18A" class="imgP">
+    <h2 class="porcionPantallaJustificado">Mi red social</h2>
+    <div class="porcionPantallaJustificado">
+        <a href="https://www.facebook.com/MelvinIhos">Mi pagina de facebook</a>
+    </div>
+    
+    <h2 class="porcionPantallaJustificado">Mis pasatiempos</h2>
+    <ul class="porcionPantallaJustificado">
         <li>Me gusta escuchar musica, en esepecial el genero pop, jpop, romanticas y rock.</li>
         <li>Me gustan los videojuegos, y mas especificamente los generos simulacion, accion, aventura y rol.</li>
         <li>Me gusta leer cosas como comics, mangas y novelas ligeras.</li>
     </ul>
-    <h2>Mis tareas pendientes</h2>
-    <ol>
+    <h2 class="porcionPantallaJustificado">Mis tareas pendientes</h2>
+    <ol class="porcionPantallaJustificado">
         <li>Lavar la ropa.</li>
         <li>Terminar un taller del SENA.</li>
         <li>Cambiar las sabanas de mi cuarto.</li>
     </ol>
-    <h2>Horario de la semana</h2>
+    <h2 class="porcionPantallaJustificado">Horario de la semana</h2>
     <table>
         <thead>
             <tr>
@@ -43,6 +50,8 @@
                 <th>Sabado</th>
                 <th>Domingo</th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
                 <td>Lavar la ropa</td>
                 <td></td>
@@ -52,16 +61,16 @@
                 <td></td>
                 <td>Cambiar las sabanas</td>
             </tr>
-        </thead>
+        </tbody>
     </table>
-    <h2>Formulario de contacto</h2>
-    <form>
-        <label for="nombre">Nombre: </label>
-        <input type="text" id="nombre" name="nombre">
-        <label for="desc">Motivo del contacto: </label>
-        <input type="text" id="desc" name="desc">
-        <label for="email">Correo Electronico: </label>
-        <input type="email" id="email" name="email">
+    <h2 class="porcionPantallaJustificado">Formulario de contacto</h2>
+    <form class="porcionPantallaJustificado">
+        <label for="nombre">Nombre: </label><br>
+        <input type="text" id="nombre" name="nombre"><br>
+        <label for="desc">Motivo del contacto: </label><br>
+        <input type="text" id="desc" name="desc"><br>
+        <label for="email">Correo Electronico: </label><br>
+        <input type="email" id="email" name="email"><br>
         <button type="submit">Enviar</button>
     </form>
 </body>
